# motor_controller

mode_sel/: CMakeLists.txt  package.xml
mode_sel/launch/: motors.launch
mode_sel/scripts/: input_selection.py
motor_controller/: CMakeLists.txt  package.xml
roboclaw/: CMakeLists.txt  package.xml
roboclaw/scripts/: .motor_test2.py.swp  .motors_test.py.swp  .tankMode.py.swp  .tank_node.py.swp  motor_test2.py  motors_test.py  roboclaw.py  tankMode.py  tank_node.py
roboclaw/scripts/test files/: motor_test2.py  tankMode.py
